--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -56,7 +56,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
             
 				        
               	{ text: "Users", href: "/users/" },
-                { text: "Programmes and projects", href: "/project/", current: true }
+                { text: "Programmes and projects", href: "/project/" }
             ]
         }) }}
     {% endif %} 
