--- a/app/views/users/edit.html
+++ b/app/views/users/edit.html
@@ -57,7 +57,7 @@
               text: "Email"
             },
             value: {
-              text: "kate.harries@test.authority.uk"
+              text: "kate.harries@localgov.co.uk"
             },
             actions: {
               items: [
