--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -17,12 +17,10 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
   </div>
   <div class="govuk-grid-column-full">
-
-
-    <!-- <h2 class="govuk-heading-m">Project reporters</h2>
+    
     {{ govukButton({
-      text: "Add a project reporter"
-    }) }} -->
+      text: "Add a new user"
+    }) }}
 
 
 		{{ govukTable({      
@@ -38,30 +36,34 @@
         [
           { text: "Kate Harries" },          
           { text: "Section 151 Officer" },
-          { text: "alex.smith@localgov.co.uk" },
+          { text: "kate.harries@localgov.co.uk" },
           { html: '<a href="/users/edit">Change</a>', format: "numeric" }
         ],
         [
         { text: "Gemma Currie" },             
           { text: "Reporter" },
-          { text: "alex.smith@localgov.co.uk" },
+          { text: "gemma.currie@localgov.co.uk" },
           { html: '<a href="/users/edit">Change</a>', format: "numeric" }
         ],
         [
         { text: "Gideon Goldberg" },          
           { text: "Senior Reporting Officer (SRO)" },
-          { text: "alex.smith@localgov.co.uk" },
+          { text: "gideon.goldberg@localgov.co.uk" },
           { html: '<a href="/users/edit">Change</a>', format: "numeric" }
         ],
         [
-        { text: "Alex Smith" },          
+        { text: "Sam Williams" },          
           { text: "Reporter" },
-          { text: "alex.smith@localgov.co.uk" },
+          { text: "sam.williams@localgov.co.uk" },
           { html: '<a href="/users/edit">Change</a>', format: "numeric" }
         ]
       ]
     }) }}
 
+
+
+
+    
 
     
 
