--- a/app/views/project.html
+++ b/app/views/project.html
@@ -15,141 +15,30 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
 
+	</div>
+	<div class="govuk-grid-column-two-thirds">	
+		<h2 class="govuk-heading-m">About the project</h2>
+		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
+
 		<ul class="govuk-list govuk-list--bullet">
+			<!-- <li>Project summary</li> -->
+			<li>Dates for completion</li>
+			<li>Reporting periods</li>				
+			<li>Reports due</li>
+			<li>View reports already submitted</li>
+			<!-- <li>Show details of contact person</li> -->
+			<!-- <li>Show details of section 151 person</li> -->
+			<!-- <li>List of users</li> -->
+			<!-- <li>Project ID</li> -->
+		</ul>
+	</div>
+  	<div class="govuk-grid-column-one-third">
 
-				<li>Project summary</li>
-				<li>Dates for completion</li>
-				<li>Reporting periods</li>				
-				<li>Reports due</li>
-				<li>View reports already submitted</li>
-				<li>Show details of contact person</li>
-				<li>Show details of section 151 person</li>
-				<!-- <li>List of users</li> -->
-				<li>Project ID</li>
-
-
-
-			</ul>
-
-
-			<p>To use the ‘Tag’ and meet the new Web Content Accessibility Guidelines (WCAG) 2.2 criteria, make sure that users can successfully:</p>
-
-		<!-- <h2 class="govuk-heading-m">Programme 1</h2> -->
-
-
-		<!-- {{ govukSummaryList({
-			card: { title: { text: "Programme Name"}, actions: { items: [ { href: "#", text: "Report", visuallyHiddenText: "of University of Gloucestershire" }, { href: "#", text: "Overview", visuallyHiddenText: "of University of Gloucestershire" } ] } },
-			rows: [
-				{ key: { text: "Project name" }, value: { html: "Report due July 2023 to September 2023 " }, actions: { items: [ { href: "/project/", text: "View", visuallyHiddenText: "age" } ] } },
-				{ key: { text: "Project name" }, value: { html: "Report due July 2023 to September 2023 " }, actions: { items: [ { href: "/project/", text: "View", visuallyHiddenText: "age" } ] } }
-				
-			  	
-			  
-			]
-	  	}) }} -->
-
-		<!-- {{ govukSummaryList({
-			card: { title: { text: "Growing Community Green Spaces project"}, actions: { items: [ { href: "#", text: "Overview", visuallyHiddenText: "of University of Gloucestershire" } ] } },
-			rows: [
-				{ key: { text: "Contact" }, value: { html: "Kate Harries" }, actions: { items: [ { href: "/project/", text: "Change", visuallyHiddenText: "age" } ] } },  
-				{ key: { text: "Section 151 officer" }, value: { html: "Kate Harries" }, actions: { items: [ { href: "/project/", text: "Change", visuallyHiddenText: "age" } ] } },  
-				{ key: { text: "Reports due" }, value: { html: "July 2023 to September 2023" }, actions: { items: [ { href: "/project/", text: "Complete", visuallyHiddenText: "age" } ] } }
-			  	
-			  
-			]
-	  	}) }} -->
-
-
-<!-- 
-		<h2 class="govuk-heading-m">Programme 2</h2>
-
-
-		{{ govukSummaryList({
-			card: { title: { text: "Growing Community Green Spaces project"}, actions: { items: [ { href: "#", text: "Overview", visuallyHiddenText: "of University of Gloucestershire" } ] } },
-			rows: [
-				{ key: { text: "Contact" }, value: { html: "Kate Harries" }, actions: { items: [ { href: "/project/", text: "Change", visuallyHiddenText: "age" } ] } },  
-				{ key: { text: "Section 151 officer" }, value: { html: "Kate Harries" }, actions: { items: [ { href: "/project/", text: "Change", visuallyHiddenText: "age" } ] } },  
-				{ key: { text: "Reports due" }, value: { html: "July 2023 to September 2023" }, actions: { items: [ { href: "/project/", text: "Complete", visuallyHiddenText: "age" } ] } }
-			  	
-			  
-			]
-	  	}) }} -->
-
-  <!-- </div>
-  <div class="govuk-grid-column-full">
-       -->
-
-
-	   
-
-	   <!-- <h3 class="govuk-heading-s">Programme reports due</h3>
-	   <p><a href="#">Regenerating Manchester’s Green Spaces</a></p>
-	   <hr class="govuk-section-break--m">
- 
-	   <h3 class="govuk-heading-s">Project reports due</h3>
-	   <p><a href="/project/">Growing Community Green Spaces</a></p>
-	   <p><a href="#">Wildlife Corridor</a></p>
- 
-	   <h3 class="govuk-heading-s">Project reports completed</h3>
-	   {{ govukDetails({
-		 summaryText: "Show completed reports",
-		 text: "To follow"
-	   }) }} -->
-
- <!-- 
-	   {{ govukAccordion({
-		 id: "accordion-default",
-		 items: [
-		   {
-			 heading: {
-			   text: "Project reports completed"              
-			 },
-			 content: {
-			   html: '<p class="govuk-body">To follow.</p>'
-			 }
-		   }
-		 ]
-	   }) }} -->
- 
-		<!-- <h2 class="govuk-heading-l">Regenerating Manchester’s Green Spaces</h2> -->
-
-
+		{% include "includes/projectBox.html "%}
 		
-		  
-<!-- 
-	  	{{ govukSummaryList({
-			card: { title: { text: "Wildlife Corridor project"}, actions: { items: [ { href: "#", text: "Overview", visuallyHiddenText: "of University of Gloucestershire" } ] } },
-			rows: [
-		  		{ key: { text: "Due" }, value: { html: "July 2023 to September 2023" }, actions: { items: [ { href: "#", text: "Complete", visuallyHiddenText: "age" } ] } },
-		  		{ key: { text: "Completed" }, value: { html: "April 2023 to June 2023" }, actions: { items: [ { href: "#", text: "View", visuallyHiddenText: "nationality" } ] } }		  
-			]
-  		}) }}
-		 -->
-<!--       
-
-
-      <h2 class="govuk-heading-m">Warrington Digital Enterprise Hub</h2>
-
-      <h3 class="govuk-heading-s">Programme reports due</h3>
-      <p><a href="#">Warrington Digital Enterprise Hub</a></p>
-      <hr class="govuk-section-break--m">
-
-      <h3 class="govuk-heading-s">Project reports due</h3>
-      <p><a href="#">Locating and Preparing the Digital Hub</a></p>
-      <p><a href="#">Resourcing Technologies</a></p>
-      <p><a href="#">Another project</a></p>
-
-      <h3 class="govuk-heading-s">Project reports completed</h3>
-      {{ govukDetails({
-        summaryText: "Show completed reports",
-        text: "To follow"
-      }) }}
-      <hr class="govuk-section-break--m">
-
-
-      <p><a href="#">View previous programme reports</a></p> -->
-
-  </div>
+		
+  	
+	</div>
 </div>
 
 {% endblock %}
