more ideas and first iterations

--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -4,8 +4,8 @@
 {% set showBread = false %}
 {% set showNav = true %}
 
-{% set pageHeading = "Reporting period July 2023 to September 2023" %}
-{% set pageSection = ' ' + data.projectName + ' ' %}
+{% set pageHeading = "Reporting period February 2024 to April 2024" %}
+{% set pageSection = 'Rugby warm hub' %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -23,8 +23,8 @@
   			html: html
 		}) }} -->
 
-		<p class="govuk-body govuk-!-margin-bottom-7">Due by 16th February 2024
-		<br><span class="govuk-body-s">Last updated: 16th February 2024 by Alex Smith</span></p>
+		<p class="govuk-body govuk-!-margin-bottom-7">Due by 26 July 2024
+		<br><span class="govuk-body-s">Last updated: 30 May 2024 by Gemma Currie</span></p>
 	
 		{% include "includes/task-overview.html" %}
 		{% include "includes/task-issues-and-risks.html" %}
