--- a/app/views/project.html
+++ b/app/views/project.html
@@ -4,7 +4,7 @@
 {% set showNav = false %}
 
 
-{% set pageHeading = "Rugby warm hub reports" %}
+{% set pageHeading = "Rugby warm hub" %}
 {% set pageSection = "Warwickshire county council " %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -14,31 +14,91 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
-
+		
 	</div>
 	<div class="govuk-grid-column-two-thirds">	
-		<h2 class="govuk-heading-m">About the project</h2>
-		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
 
-		<ul class="govuk-list govuk-list--bullet">
-			<!-- <li>Project summary</li> -->
-			<li>Dates for completion</li>
-			<li>Reporting periods</li>				
-			<li>Reports due</li>
-			<li>View reports already submitted</li>
-			<!-- <li>Show details of contact person</li> -->
-			<!-- <li>Show details of section 151 person</li> -->
-			<!-- <li>List of users</li> -->
-			<!-- <li>Project ID</li> -->
-		</ul>
+		<p class="govuk-body govuk-!-margin-bottom-3">Expected completion date: 30 May 2025
+		<br><span class="govuk-body-s">Last updated: 31 May 2024 by Gemma Currie</span></p>
+
+
+		<h2 class="govuk-heading-m">Intro</h2>
+		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written. A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
+
+
+
+		<h2 class="govuk-heading-m govuk-!-margin-top-7">Reports due</h2>
+		{{ govukSummaryList({		
+			card: { title: { text: "February 2024 to April 2024" } },	
+			rows: [				
+				
+				{ key: { text: "Reporter" }, value: { html: "Gemma Currie" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Deadline" }, value: { html: "26 July 2024" } },
+				{ key: { text: "Date submitted" }, value: { html: "Not started" }, actions: { items: [ { href: "/project/", classes: "govuk-link--no-visited-state", text: "Create report", visuallyHiddenText: "for this project" } ] } }
+			]
+	  	}) }}
+		  <!-- { key: { text: "Reporting period" }, value: { html: "February 2024 to April 2024" } },	 -->
+
+		  <h2 class="govuk-heading-m govuk-!-margin-top-7">Submitted reports</h2>
+		  {{ govukSummaryList({		
+			card: { title: { text: "November 2023 to January 2024" } },	
+			rows: [				
+				
+				{ key: { text: "Reporter" }, value: { html: "Gemma Currie" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Deadline" }, value: { html: "28 April 2024" } },
+				{ key: { text: "Date submitted" }, value: { html: "30 May 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View report", visuallyHiddenText: "for this project" } ] } }
+			]
+	  	}) }}
+
+		  {{ govukSummaryList({		
+			card: { title: { text: "August 2023 to October 2023" } },	
+			rows: [				
+				
+				{ key: { text: "Reporter" }, value: { html: "Sam Williams" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Deadline" }, value: { html: "29 January 2024" } },
+				{ key: { text: "Date submitted" }, value: { html: "28 February 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View report", visuallyHiddenText: "for this project" } ] } }
+			]
+	  	}) }}
+
 	</div>
   	<div class="govuk-grid-column-one-third">
 
 		{% include "includes/projectBox.html "%}
 		
 		
+		
   	
 	</div>
+
+	<div class="govuk-grid-column-full">
+
+		
+
+
+
+
+
+
+		{{ govukTable({
+			caption: "Reports",
+			captionClasses: "govuk-table__caption--m",
+			firstCellIsHeader: true,
+			head: [
+				{ text: "Period", classes: "app-custom-class" },
+			  	{ text: "Reporter", classes: "app-custom-class" },
+			  	{ text: "Date submitted", classes: "app-custom-class" },
+			  	{ text: "", classes: "app-custom-class" }
+			],
+			rows: [
+				[ { text: "February 2024 to April 2024" }, { text: "Gemma Currie" }, { html: 'Not started' }, { html: '<a href="/project/">Create report</a>' } ],
+			  	[ { text: "November 2023 to January 2024" }, { text: "Gemma Currie" }, { text: "30 May 2024" }, { html: '<a href="#">View</a>' } ],
+			  	[ { text: "August 2023 to October 2023"}, { text: "Gemma Currie"}, { text: "28 February 2024"}, { html: '<a href="#">View</a>' } ]			  			
+			]
+		  }) }}
+
+	</div>
+
+
 </div>
 
 {% endblock %}
