--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,7 +1,9 @@
 {% extends "layouts/main.html" %}
 
 {% set showBackLink = false %}
-{% set showNav = false %}
+{% set showNav = true %}
+{% set showBread = true %}
+
 
 
 {% set pageHeading = "Rugby warm hub" %}
