--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% set showBackLink = false %}
-{% set showBread = false %}
+{% set showBread = true %}
 {% set showNav = true %}
 
 {% set pageHeading = "Reporting period February 2024 to April 2024" %}
