--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% set showBackLink = false %}
-{% set showBread = true %}
+{% set showBread = false %}
 
 {% set showNav = true %}
 
