--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -21,18 +21,18 @@
 
 
 		{{ govukSummaryList({
-			card: { title: { html: '<span class="govuk-!-font-size-24">Food bank fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of Food bank fund" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for Food bank fund" } ] } },
+			card: { title: { html: '<span class="govuk-!-font-size-24">Community Renewal Fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of Food bank fund" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for Food bank fund" } ] } },
 			rows: [
-				{ key: { text: "Rugby warm hub" }, value: { html: "Report due 2 June 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } },
-				{ key: { text: "Community food project" }, value: { html: "Report due 30 August 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
+				{ key: { text: "Blackpool Youth Hub" }, value: { html: "Report due 2 June 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Ready For Work" }, value: { html: "Report due 30 August 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
 			]
 	  	}) }}
 
 
 		  {{ govukSummaryList({
-			card: { title: { html: '<span class="govuk-!-font-size-24">Programme Name</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of programme name" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for programme name" } ] } },
+			card: { title: { html: '<span class="govuk-!-font-size-24">Getting Building Fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of programme name" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for programme name" } ] } },
 			rows: [
-				{ key: { text: "Project name" }, value: { html: "Report due July 2023 to September 2023 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
+				{ key: { text: "Safe Spaces For Young People" }, value: { html: "Report due July 2023 to September 2023 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
 				
 				
 			  	
