--- a/app/views/service-start.html
+++ b/app/views/service-start.html
@@ -17,12 +17,25 @@
 		<p class="govuk-body">Vivamus efficitur turpis arcu, id hendrerit turpis convallis et. Sed massa sapien, scelerisque id nunc vitae, porta consequat lorem.</p>
 		<p class="govuk-body">Vivamus efficitur turpis arcu, id hendrerit turpis convallis et. Sed massa sapien, scelerisque id nunc vitae, porta consequat lorem.</p>
 
-      	{{ govukButton({
+		{% if data['useOneLogin'] == "Yes" %}
+
+		{{ govukButton({
+        	text: "Start now",
+        	href: "/oneLogin/",
+        	isStartButton: true,
+			classes: "govuk-!-margin-top-5"
+      	}) }}
+
+		{% else %}
+      	
+		{{ govukButton({
         	text: "Start now",
         	href: "/sign-in",
         	isStartButton: true,
 			classes: "govuk-!-margin-top-5"
       	}) }}
+
+		{% endif %}
 
 
       	<h2 class="govuk-heading-m">Before you start</h2>
