login override fixed

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,7 @@
                     }) }}
                 </form>  -->
                                 
-                <form action="/service-start" method="post" >                    
+                <form action="/service-start?useOneLogin=" method="post" >                    
                     {{ govukButton({
                         text: "Sign in using microsoft"
                     }) }}
