removal of programme links on cards

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -11,9 +11,11 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-	<div class="govuk-grid-column-full">
+	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
+		
+	
 		
 
 
@@ -21,7 +23,7 @@
 
 
 		{{ govukSummaryList({
-			card: { title: { html: '<span class="govuk-!-font-size-24">Community Renewal Fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of Food bank fund" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for Food bank fund" } ] } },
+			card: { title: { html: '<span class="govuk-!-font-size-24">Community Renewal Fund</span>'} },
 			rows: [
 				{ key: { text: "Blackpool youth hub" }, value: { html: "Report due 2 June 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } },
 				{ key: { text: "Ready for work" }, value: { html: "Report due 30 August 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
@@ -30,7 +32,7 @@
 
 
 		  {{ govukSummaryList({
-			card: { title: { html: '<span class="govuk-!-font-size-24">Getting Building Fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "Programme overview", visuallyHiddenText: "of programme name" }, { href: "#", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for programme name" } ] } },
+			card: { title: { html: '<span class="govuk-!-font-size-24">Getting Building Fund</span>'} },
 			rows: [
 				{ key: { text: "Safe spaces for young people" }, value: { html: "Report due July 2023 to September 2023 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Reports", visuallyHiddenText: "for this project" } ] } }
 				
