--- a/app/views/project.html
+++ b/app/views/project.html
@@ -6,7 +6,7 @@
 
 
 
-{% set pageHeading = "Rugby warm hub" %}
+{% set pageHeading = "Blackpool youth hub" %}
 {% set pageSection = "Warwickshire county council " %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
