--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -26,7 +26,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 			visuallyHiddenTitle: "Secondary menu",
 			items: [							
 				{ text: "Users", href: "/users/?nav=users", current: true },
-				{ text: "Programmes and projects", href: "/dashboard?nav=pro" }
+				{ text: "Funds and projects", href: "/dashboard?nav=pro" }
 			]
 		}) }}
 		
@@ -36,7 +36,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 			visuallyHiddenTitle: "Secondary menu",
 			items: [							
 				{ text: "Users", href: "/users/?nav=users" },
-				{ text: "Programmes and projects", href: "/dashboard?nav=pro", current: true }
+				{ text: "Funds and projects", href: "/dashboard?nav=pro", current: true }
 			]
 		}) }}
 
