--- a/app/views/includes/projectBox.html
+++ b/app/views/includes/projectBox.html
@@ -9,7 +9,9 @@
         <br><span class="govuk-!-font-weight-bold">{{ data.completionDate }}</span></p> -->
         <p class="govuk-body govuk-!-margin-bottom-2">Contact person
         <br><span class="govuk-!-font-weight-bold">{{ data.contactPerson }}</span></p>
-        <p class="govuk-body">Section 151 Officer
+        <p class="govuk-body govuk-!-margin-bottom-2">Section 151 Officer
+        <br><span class="govuk-!-font-weight-bold">{{ data.section151 }}</span></p>     
+        <p class="govuk-body govuk-!-margin-bottom-2">SRO Officer
         <br><span class="govuk-!-font-weight-bold">{{ data.section151 }}</span></p>     
 
         <!-- <p class="govuk-body">Programme
@@ -21,8 +23,8 @@
 
         <p><a class="govuk-link govuk-link--no-visited-state" href="#">Update</a></p>
 
-        <h2 class="govuk-heading-m">Summary</h2>
-		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written. A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
+        <h2 class="govuk-heading-m">Project summary</h2>
+		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
 
     </section>
 </article>
