--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -2,10 +2,10 @@
 
 {% set showBackLink = false %}
 {% set showBread = true %}
-{% set showNav = true %}
+{% set showNav = false %}
 
 {% set pageHeading = "Reporting period February 2024 to April 2024" %}
-{% set pageSection = 'Rugby warm hub' %}
+{% set pageSection = 'Blackpool youth hub' %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -23,8 +23,8 @@
   			html: html
 		}) }} -->
 
-		<p class="govuk-body govuk-!-margin-bottom-7">Due by 26 July 2024
-		<br><span class="govuk-body-s">Last updated: 30 May 2024 by Gemma Currie</span></p>
+		<p class="govuk-body govuk-!-margin-bottom-7">Due by 16 June 2024</p>
+		<!-- <br><span class="govuk-body-s">Last updated: 1 June 2024 by Gemma Currie</span></p> -->
 	
 		{% include "includes/task-overview.html" %}
 		{% include "includes/task-issues-and-risks.html" %}
