--- a/app/views/users/edit.html
+++ b/app/views/users/edit.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 {% set showBread = false %}
 {% set showNav = true %}
 
