changes to user tables

--- a/app/views/users/edit.html
+++ b/app/views/users/edit.html
@@ -35,23 +35,7 @@
               ]
             }
           },
-          {
-            key: {
-              text: "Role"
-            },
-            value: {
-              text: "Section 151 Officer"
-            },
-            actions: {
-              items: [
-                {
-                  href: "#",
-                  text: "Change",
-                  visuallyHiddenText: "date of birth"
-                }
-              ]
-            }
-          },
+          
           {
             key: {
               text: "Email"
@@ -94,18 +78,24 @@
               html: '<p class="govuk-body">Sign-off</p>'
             },
             actions: {
-              items: [                
-                {
-                  href: "#",
-                  text: "Change",
-                  visuallyHiddenText: "contact details"
-                }
-              ]
+              
             }
           }
         ]
       }) }}
 
+
+      <!-- {
+        key: {
+          text: "Position"
+        },
+        value: {
+          text: "Section 151 Officer"
+        },
+        actions: {
+          
+        }
+      }, -->
 
 
       <p class="govuk-body"><a class="govuk-link" href="#">Remove this user</a></p>
