--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -51,7 +51,7 @@
     	}) }}
 
 
-    	<h2 class="govuk-heading-m govuk-!-margin-bottom-1 govuk-!-margin-top-9">Section 151 officers</h2>
+    	<h2 class="govuk-heading-m govuk-!-margin-bottom-1 govuk-!-margin-top-9">Sign-off</h2>
     	{{ govukTable({      
       		captionClasses: "govuk-table__caption--m",      
       		head: [
