project overview page

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -27,7 +27,7 @@
 		}) }} -->
 
 	</div>
-	<div class="govuk-grid-column-full">
+	<div class="govuk-grid-column-three-quarters">
 
 		{{ govukSummaryList({
 			card: { title: { html: '<span class="govuk-!-font-size-24">Getting Building Fund</span>'} },
