--- a/app/views/project.html
+++ b/app/views/project.html
@@ -27,7 +27,17 @@
 		<h2 class="govuk-heading-m">Intro</h2>
 		<p>A project summary is a comprehensive report on the project's key details and its status at the time the report is written.</p>
 
-
+		<ul class="govuk-list govuk-list--bullet">
+			<li>Project summary</li>
+			<li>Dates for completion</li>
+			<li>Reporting periods</li>				
+			<li>Reports due</li>
+			<li>View reports already submitted</li>
+			<li>Show details of contact person</li>
+			<li>Show details of section 151 person</li>
+			<li>List of users</li>
+			<li>Project ID</li>
+		</ul>
 
 		<h2 class="govuk-heading-m govuk-!-margin-top-7">Reports due</h2>
 		{{ govukSummaryList({		
